; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_r600_cp.c_r600_ib_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_r600_cp.c_r600_ib_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.drm_file = type { i32 }
%struct.drm_buf = type { %struct.drm_file* }

@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_device*, %struct.drm_file*, %struct.drm_buf**)* @r600_ib_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @r600_ib_get(%struct.drm_device* %0, %struct.drm_file* %1, %struct.drm_buf** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.drm_device*, align 8
  %6 = alloca %struct.drm_file*, align 8
  %7 = alloca %struct.drm_buf**, align 8
  %8 = alloca %struct.drm_buf*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %5, align 8
  store %struct.drm_file* %1, %struct.drm_file** %6, align 8
  store %struct.drm_buf** %2, %struct.drm_buf*** %7, align 8
  %9 = load %struct.drm_buf**, %struct.drm_buf*** %7, align 8
  store %struct.drm_buf* null, %struct.drm_buf** %9, align 8
  %10 = load %struct.drm_device*, %struct.drm_device** %5, align 8
  %11 = call %struct.drm_buf* @radeon_freelist_get(%struct.drm_device* %10)
  store %struct.drm_buf* %11, %struct.drm_buf** %8, align 8
  %12 = load %struct.drm_buf*, %struct.drm_buf** %8, align 8
  %13 = icmp ne %struct.drm_buf* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %3
  %15 = load i32, i32* @EBUSY, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %4, align 4
  br label %23

17:                                               ; preds = %3
  %18 = load %struct.drm_file*, %struct.drm_file** %6, align 8
  %19 = load %struct.drm_buf*, %struct.drm_buf** %8, align 8
  %20 = getelementptr inbounds %struct.drm_buf, %struct.drm_buf* %19, i32 0, i32 0
  store %struct.drm_file* %18, %struct.drm_file** %20, align 8
  %21 = load %struct.drm_buf*, %struct.drm_buf** %8, align 8
  %22 = load %struct.drm_buf**, %struct.drm_buf*** %7, align 8
  store %struct.drm_buf* %21, %struct.drm_buf** %22, align 8
  store i32 0, i32* %4, align 4
  br label %23

23:                                               ; preds = %17, %14
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local %struct.drm_buf* @radeon_freelist_get(%struct.drm_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
